assets,html,css
0106 am 3:30

--- a/me/me.html
+++ b/me/me.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="utf-8">
     <title> ABOUT ME </title>
-    <link rel="stylesheet" href="../index.html">
     <link rel="stylesheet" href="../assets/css/jquery-ui.css">
+    <link rel="stylesheet" href="../assets/css/common.css">
+    <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/font.css">
+
     <script src="../assets/js/jquery-1.12.4.min.js"></script>
     <script src="../assets/js/jquery-ui.min.js"></script>
+    <script src="../assets/js/common.js"></script>
+    <script src="../assets/js/main.js"></script>
     <script src="../assets/js/style.js"></script>
 </head>
 <body>
     <div id="skip"><a href="#me">본문 바로가기</a></div>
 
-    <header id="header"></header>
+    <header id="header" class="head"></header>
 
     <section id="content">
         <article class="w1400" id="me">
