--- a/project/project.html
+++ b/project/project.html
@@ -3,19 +3,25 @@
 <head>
     <meta charset="utf-8">
     <title> 포트폴리오 </title>
-    <link rel="stylesheet" href="assets/css/jquery-ui.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/jquery-1.12.4.min.js"></script>
-    <script src="assets/js/jquery-ui.min.js"></script>
-    <script src="assets/js/style.js"></script>
+    <link rel="stylesheet" href="../assets/css/jquery-ui.css">
+    <link rel="stylesheet" href="../assets/css/common.css">
+    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/font.css">
+
+    <script src="../assets/js/jquery-1.12.4.min.js"></script>
+    <script src="../assets/js/jquery-ui.min.js"></script>
+    <script src="../assets/js/common.js"></script>
+    <script src="../assets/js/main.js"></script>
+    <script src="../assets/js/style.js"></script>
 </head>
 <body>
-    <div id="skip"><a href="#cnt1">본문 바로가기</a></div>
+    <div id="skip"><a href="#cntA">본문 바로가기</a></div>
 
-    <header id="header"></header>
+    <header id="header" class="head"></header>
 
     <section id="content">
-        <article id="cnt1" class="w1400">
+        <article id="cntA" class="w1400">
             <h2>
                 <span class="right">지금까지 저의 </span>
                 <span class="left">작업물을 소개합니다</span>
