--- a/header.html
+++ b/header.html
@@ -6,19 +6,17 @@
     <link rel="stylesheet" href="assets/css/common.css">
 </head>
 <body>
-    <div class="w1400">
-        <h1 class="logo"><a href="index.html">HyunJu's Portfolio</a></h1>
+    <div class="header">
+        <h1 class="logo"><a href="../index.html">HyunJu's Portfolio</a></h1>
         <button class="gnb_open_btn" type="button" title="네비게이션 열기"></button>
         <nav class="gnb" id="gnb">
             <ul>
-                <li><a href="index.html" class="first">HOME</a></li>
-                <li><a href="me/me.html">ABOUT ME</a></li>
-                <li><a href="project/project.html">PORTFOLIO</a></li>
+                <li><a href="../index.html" class="first">HOME</a></li>
+                <li><a href="../me/me.html">ABOUT ME</a></li>
+                <li><a href="../project/project.html">PORTFOLIO</a></li>
                 <li><a href="">REPORT</a></li>
             </ul>
             <button class="gnb_close_btn last" type="button" title="네비게이션 닫기">
-                <span></span>
-                <span></span>
             </button>
         </nav>
         <p class="email"><span class="blind">이메일</span>nam_guswn9845@naver.com</p>
