--- a/index.html
+++ b/index.html
@@ -18,19 +18,28 @@
 <body>
     <div id="skip"><a href="#cnt1">본문 바로가기</a></div>
     <header id="header">
+        <h1 class="logo"><a href="index.html">HyunJu's Portfolio</a></h1>
+        <p class="email"><span class="blind">이메일</span>nam_guswn9845@naver.com</p>
     </header>
 
     <section id="content">
-        <article class="w1400" id="cnt1">
-            <h2>Let's become<br>
-                a publisher,<br>
-                UI&Markup Developer<br>
-                that creates meaningful value</h2>
-            <p>Scroll down</p>
+        <article id="cnt1">
+            <div class="img_wrap">
+                <img src="assets/images/main/mint_flower.svg" alt="">
+                <img src="assets/images/main/red_flower.svg" alt="">
+                <img src="assets/images/main/plus.svg" alt="">
+                <img src="assets/images/main/triangle.svg" alt="">
+                <img src="assets/images/main/red_flower.svg" alt="">
+            </div>
+                <h2>Let's become<br>
+                    a publisher,<br>
+                    UI&Markup Developer<br>
+                    that creates meaningful value</h2>
+                <p>Scroll down</p>
         </article>
         <article id="cnt2">
-            <div class="txt">
-                <ul class="gnb" id="indexGnb">
+            <div class="gnb">
+                <ul id="indexGnb">
                     <li><a href="me/me.html">ABOUT ME</a></li>
                     <li><a href="project/project.html">PORTFOLIO</a></li>
                     <li><a href="report/report">REPORT</a></li>
