--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section id="content">
         <article id="cnt1">
-            <div class="img_wrap">
+            <div class="bg">
                 <img src="assets/images/main/mint_flower.svg" alt="">
                 <img src="assets/images/main/red_flower.svg" alt="">
                 <img src="assets/images/main/plus.svg" alt="">
