--- a/me/me.html
+++ b/me/me.html
@@ -21,8 +21,7 @@
     <header id="header" class="head"></header>
 
     <section id="content">
-        <article class="w1400" id="me">
-            <h2 class="tit">ABOUT ME</h2>
+        <article id="me">
             <div class="bg">
                 <img src="../assets/images/aboutme/dot_circle_bg.svg" alt="">
                 <img src="../assets/images/common/yellow_line.svg" alt="">
@@ -32,73 +31,85 @@
                 <img src="../assets/images/aboutme/dot_circle_bg.svg" alt="">
                 <img src="../assets/images/common/yellow_line.svg" alt="">
             </div>
-            <div class="me_before">
+            <div class="w1400 p_r">
+                <h2 class="tit">ABOUT ME</h2>
                 <p class="click1">물음표(?)를 클릭해주세요!</p>
                 <p class="click2">웃는 이모티콘을 클릭해주세요!</p>
                 
                 <div class="img_wrap">
                     <img src="../assets/images/aboutme/me.png" alt="분수대 앞에서 걸쳐 앉아있는 남현주">
-                    <img src="../assets/images/icon/smile_icon.svg" alt="첫번째 텍스트와 연결된 웃는 얼굴 아이콘">
-                    <img src="../assets/images/icon/smile_icon.svg" alt="두번째 텍스트와 연결된 웃는 얼굴 아이콘">
-                    <img src="../assets/images/icon/smile_icon.svg" alt="세번째 텍스트와 연결된 웃는 얼굴 아이콘">
-                    <img src="../assets/images/icon/smile_icon.svg" alt="네번째 텍스트와 연결된 웃는 얼굴 아이콘">
-                    <button><img src="../assets/images/icon/q_mark.svg" alt="물음표"></button>
+                    <a href=".txt1" class="smile1 smile"><span class="blind">첫번째 텍스트와 연결된 웃는 얼굴 아이콘</span></a>
+                    <a href=".txt2" class="smile2 smile"><span class="blind">두번째 텍스트와 연결된 웃는 얼굴 아이콘</span></a>
+                    <a href=".txt3" class="smile3 smile"><span class="blind">세번째 텍스트와 연결된 웃는 얼굴 아이콘</span></a>
+                    <a href=".txt4" class="smile4 smile"><span class="blind">네번째 텍스트와 연결된 웃는 얼굴 아이콘</span></a>
+                    
+                    <button type="button"></button>
                 </div>
                 <div class="txt">
                     <p class="first">WHO ARE YOU</p>
                     <p class="mid">WHO ARE YOU</p>
                     <p class="last">WHO ARE YOU</p>
                 </div>
-                <p>안녕하세요. 의미있는 가치를 만들고 싶은 웹퍼블리셔 남현주 입니다.</p>
-                <p>디지털미디어학과에서 UIUX를 전공하며 사용자에게 최적의 경험을 제공하기 위해서 어떻게 디자인을 해야하는 것인지  공부하였습니다.</p>
-                <p>이제는 웹퍼블리셔로서 탄탄한 코드로 디자인을 해보려합니다.<br>
-                    항상 사용자 입장에서 먼저 생각하고,<br>
-                    사용자의 기억에서 오래 남을 수 있는 웹사이트를 만들겠습니다.</p>
-                <p>원래 여행이나 야외활동을 좋아하는데 코로나19 사태로 인해 집에 있는 시간이 많아지면서 '영상 만들기'와 '비즈 공예'라는 새로운 취미를 갖게되었습니다.</p>
-                <iframe src="https://youtu.be/DEnpLPTmMi0" title="도형을 활용한 모션그래픽" width="1100">이 브라우저는 iframe을 지원하지 않습니다</iframe>
-                <a href="https://www.youtube.com/channel/UCno9zIHLVtwBVunylUjyqXw">youtube 놀러가기</a>
+                <div class="text">
+                    <p class="txt1">안녕하세요. 의미있는 가치를 만들고 싶은 웹퍼블리셔 남현주 입니다.</p>
+                    <p class="txt2">디지털미디어학과에서 UIUX를 전공하며 사용자에게 최적의 경험을 제공하기 위해서 어떻게 디자인을 해야하는 것인지  공부하였습니다.</p>
+                    <p class="txt3">이제는 웹퍼블리셔로서 탄탄한 코드로 디자인을 해보려합니다.<br>
+                        항상 사용자 입장에서 먼저 생각하고,<br>
+                        사용자의 기억에서 오래 남을 수 있는 웹사이트를 만들겠습니다.</p>
+                    <p class="txt4">원래 여행이나 야외활동을 좋아하는데 코로나19 사태로 인해 집에 있는 시간이 많아지면서 '영상 만들기'와 '비즈 공예'라는 새로운 취미를 갖게되었습니다.</p>
+                </div>
+                <div class="video">
+                    <iframe src="https://youtu.be/DEnpLPTmMi0" title="도형을 활용한 모션그래픽">이 브라우저는 iframe을 지원하지 않습니다</iframe>
+                    <a href="https://www.youtube.com/channel/UCno9zIHLVtwBVunylUjyqXw">youtube 놀러가기</a>
+                </div>
             </div>
         </article>
-        <article class="w1400" id="skill">
-            <h2 class="tit">SKILL</h2>
-            <span>제가 잘하는 일을 소개합니다</span>
-            <div class="programming">
-                <strong>Programming Language</strong>
-                <div class="txt">
-                    <span>HTML</span>
-                    <span>CSS</span>
-                    <span>SASS</span>
-                    <span>jQUERY</span>
-                    <span>JAVASCRIPT</span>
-                    <span>BOOTSTRAP</span>
-                </div>
+        <article id="skill">
+            <div class="w1400 tit_wrap">
+                <h2 class="tit">SKILL</h2>
+                <span>제가 잘하는 일을 소개합니다</span>
             </div>
-            <div class="design">
-                <strong>Design</strong>
-                <div class="txt">
-                    <span>ILLUSTRATOR</span>
-                    <span>XD</span>
-                    <span>PHOTOSHOP</span>
+            <div class="wrap">
+                <div class="w1400">
+                    <div class="programming">
+                        <strong>Programming Language</strong>
+                        <div class="txt">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>SASS</span>
+                            <span>jQUERY</span>
+                            <span>JAVASCRIPT</span>
+                            <span>BOOTSTRAP</span>
+                        </div>
+                    </div>
+                    <div class="design">
+                        <strong>Design</strong>
+                        <div class="txt">
+                            <span>ILLUSTRATOR</span>
+                            <span>XD</span>
+                            <span>PHOTOSHOP</span>
+                        </div>
+                    </div>
+                    <div class="ect">
+                        <strong>Ect</strong>
+                        <div class="txt">
+                            <span>ZEPLIN</span>
+                            <span>Premiere Pro</span>
+                            <span>After Effects</span>
+                            <span>Git hub</span>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="ect">
-                <strong>Ect</strong>
-                <div class="txt">
-                    <span>ZEPLIN</span>
-                    <span>Premiere Pro</span>
-                    <span>After Effects</span>
-                    <span>Git hub</span>
-                </div>
-            </div>
-            <p id="jump">JUMP</p>
-            <div class="guide">
-                <p></p>
-                <div class="keyboard">
-                    <div class="up"><img src="../assets/images/icon/up_gray.svg" alt="위 방향키"></div>
-                    <div class="right"><img src="../assets/images/icon/up_gray.svg" alt="오른쪽 방향키"></div>
-                    <div class="down"><img src="../assets/images/icon/up_gray.svg" alt="아래 방향키"></div>
-                    <div class="left"><img src="../assets/images/icon/up_gray.svg" alt="왼쪽 방향키"></div>
-                    <div class="spacebar">space bar</div>
+                <p id="jump">JUMP</p>
+                <div class="guide">
+                    <p></p>
+                    <div class="keyboard">
+                        <div class="up"><img src="../assets/images/icon/up_gray.svg" alt="위 방향키"></div>
+                        <div class="right"><img src="../assets/images/icon/up_gray.svg" alt="오른쪽 방향키"></div>
+                        <div class="down"><img src="../assets/images/icon/up_gray.svg" alt="아래 방향키"></div>
+                        <div class="left"><img src="../assets/images/icon/up_gray.svg" alt="왼쪽 방향키"></div>
+                        <div class="spacebar">space bar</div>
+                    </div>
                 </div>
             </div>
             <div class="txt">
