--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="../index.html" class="first">HOME</a></li>
                 <li><a href="../me/me.html">ABOUT ME</a></li>
-                <li><a href="../project/project.html">PORTFOLIO</a></li>
+                <li><a href="../project/project.html">PROJECT</a></li>
                 <li><a href="">REPORT</a></li>
             </ul>
             <button class="gnb_close_btn last" type="button" title="네비게이션 닫기">
