--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="gnb">
                 <ul id="indexGnb">
                     <li><a href="me/me.html">ABOUT ME</a></li>
-                    <li><a href="project/project.html">PORTFOLIO</a></li>
+                    <li><a href="project/project.html">PROJECT</a></li>
                     <li><a href="report/report">REPORT</a></li>
                 </ul>
             </div>
