--- a/me/me.html
+++ b/me/me.html
@@ -38,12 +38,19 @@
                 
                 <div class="img_wrap">
                     <img src="../assets/images/aboutme/me.png" alt="분수대 앞에서 걸쳐 앉아있는 남현주">
-                    <a href=".txt1" class="smile1 smile"><span class="blind">첫번째 텍스트와 연결된 웃는 얼굴 아이콘</span></a>
-                    <a href=".txt2" class="smile2 smile"><span class="blind">두번째 텍스트와 연결된 웃는 얼굴 아이콘</span></a>
-                    <a href=".txt3" class="smile3 smile"><span class="blind">세번째 텍스트와 연결된 웃는 얼굴 아이콘</span></a>
-                    <a href=".txt4" class="smile4 smile"><span class="blind">네번째 텍스트와 연결된 웃는 얼굴 아이콘</span></a>
-                    
                     <button type="button"></button>
+                    <a href=".txt1" class="smile1 smile">
+                        <img src="../assets/images/icon/smile_icon.svg" alt="첫번째 텍스트와 연결된 웃는 얼굴 아이콘">
+                    </a>
+                    <a href=".txt2" class="smile2 smile">
+                        <img src="../assets/images/icon/smile_icon.svg" alt="두번째 텍스트와 연결된 웃는 얼굴 아이콘">
+                    </a>
+                    <a href=".txt3" class="smile3 smile">
+                        <img src="../assets/images/icon/smile_icon.svg" alt="세번째 텍스트와 연결된 웃는 얼굴 아이콘">
+                    </a>
+                    <a href=".txt4" class="smile4 smile">
+                        <img src="../assets/images/icon/smile_icon.svg" alt="네번째 텍스트와 연결된 웃는 얼굴 아이콘">
+                    </a>
                 </div>
                 <div class="txt">
                     <p class="first">WHO ARE YOU</p>
@@ -70,9 +77,11 @@
                 <span>제가 잘하는 일을 소개합니다</span>
             </div>
             <div class="wrap">
-                <div class="w1400">
+                <div class="w1400 p_r">
                     <div class="programming">
-                        <strong>Programming Language</strong>
+                        <div class="hexagon">
+                            <strong>Programming Language</strong>
+                        </div>
                         <div class="txt">
                             <span>HTML</span>
                             <span>CSS</span>
@@ -83,7 +92,9 @@
                         </div>
                     </div>
                     <div class="design">
-                        <strong>Design</strong>
+                        <div class="hexagon">
+                            <strong>Design</strong>
+                        </div>
                         <div class="txt">
                             <span>ILLUSTRATOR</span>
                             <span>XD</span>
@@ -91,7 +102,9 @@
                         </div>
                     </div>
                     <div class="ect">
-                        <strong>Ect</strong>
+                        <div class="hexagon">
+                            <strong>Ect</strong>
+                        </div>
                         <div class="txt">
                             <span>ZEPLIN</span>
                             <span>Premiere Pro</span>
@@ -99,22 +112,22 @@
                             <span>Git hub</span>
                         </div>
                     </div>
-                </div>
-                <p id="jump">JUMP</p>
-                <div class="guide">
-                    <p></p>
-                    <div class="keyboard">
-                        <div class="up"><img src="../assets/images/icon/up_gray.svg" alt="위 방향키"></div>
-                        <div class="right"><img src="../assets/images/icon/up_gray.svg" alt="오른쪽 방향키"></div>
-                        <div class="down"><img src="../assets/images/icon/up_gray.svg" alt="아래 방향키"></div>
-                        <div class="left"><img src="../assets/images/icon/up_gray.svg" alt="왼쪽 방향키"></div>
-                        <div class="spacebar">space bar</div>
+                    <p id="jump">JUMP</p>
+                    <div class="guide">
+                        <p>키보드로 원을 움직여보세요</p>
+                        <div class="keyboard">
+                            <div class="up"><img src="../assets/images/icon/up_gray.svg" alt="위 방향키"></div>
+                            <div class="right"><img src="../assets/images/icon/up_gray.svg" alt="오른쪽 방향키"></div>
+                            <div class="down"><img src="../assets/images/icon/up_gray.svg" alt="아래 방향키"></div>
+                            <div class="left"><img src="../assets/images/icon/up_gray.svg" alt="왼쪽 방향키"></div>
+                            <div class="spacebar">space bar</div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="txt">
-                <p class="full">HTML CSS SASS jQUERY JAVASCRIPT BOOTSTRAP ILLUSTRATOR XD PHOTOSHOP ZEPLIN PREMIEREPRO AFTEREFFECTS GITHURB</p>
-                <p class="line">HTML CSS SASS jQUERY JAVASCRIPT BOOTSTRAP ILLUSTRATOR XD PHOTOSHOP ZEPLIN PREMIEREPRO AFTEREFFECTS GITHURB</p>
+            <div class="movetxt">
+                <marquee class="full" scrollamount=10  >HTML CSS SASS jQUERY JAVASCRIPT BOOTSTRAP ILLUSTRATOR XD PHOTOSHOP ZEPLIN PREMIEREPRO AFTEREFFECTS GITHURB</marquee>
+                <marquee class="line" scrollamount=10 direction=right>HTML CSS SASS jQUERY JAVASCRIPT BOOTSTRAP ILLUSTRATOR XD PHOTOSHOP ZEPLIN PREMIEREPRO AFTEREFFECTS GITHURB</marquee>
             </div>
         </article>
     </section>
