--- a/project/project.html
+++ b/project/project.html
@@ -22,10 +22,8 @@
 
     <section id="content">
         <article id="cntA" class="w1400">
-            <h2>
-                <span class="right">지금까지 저의 </span>
-                <span class="left">작업물을 소개합니다</span>
-            </h2>
+            <p class="right">지금까지 저의 </p>
+            <p class="left">작업물을 소개합니다</p>
             <div class="loading">
                 <div class="squareS"></div>
                 <div class="squareL"></div>
