--- a/index.html
+++ b/index.html
@@ -24,18 +24,12 @@
 
     <section id="content">
         <article id="cnt1">
-            <div class="bg">
-                <img src="assets/images/main/mint_flower.svg" alt="">
-                <img src="assets/images/main/red_flower.svg" alt="">
-                <img src="assets/images/main/plus.svg" alt="">
-                <img src="assets/images/main/triangle.svg" alt="">
-                <img src="assets/images/main/red_flower.svg" alt="">
-            </div>
                 <h2>Let's become<br>
                     a publisher,<br>
                     UI&Markup Developer<br>
                     that creates meaningful value</h2>
                 <p>Scroll down</p>
+                <img src="assets/images/main/red_flower.svg" class="red_flower" alt="8개의 꽃잎이 있는 빨간꽃이 360도로 계속 회전하고 있다">
         </article>
         <article id="cnt2">
             <div class="gnb">
