--- a/project/project.html
+++ b/project/project.html
@@ -20,7 +20,7 @@
 
     <header id="header" class="head"></header>
 
-    <section id="content">
+    <section id="projectCnt">
         <article id="cntA" class="w1400">
             <p class="right">지금까지 저의 </p>
             <p class="left">작업물을 소개합니다</p>
@@ -31,7 +31,7 @@
             <div class="shadow"></div>
         </article>
         <article id="jaenung">
-            <div class="w1400">
+            <div class="w1400 p_r">
                 <div class="txt">
                     <h3 class="tit">PROJECT01. 재능교육</h3>
                     <ul>
@@ -42,13 +42,15 @@
                     </ul>
                 </div>
                 <div class="go_btn">
-                    <ul>
+                    <ul class="clearfix">
                         <li><a href="namhyunju.github.io/project03/." class="sitego">사이트 바로가기</a></li>
                         <li><a href="#jaenung_info" class="linkgo">상세설명 보기</a></li>
                     </ul>
                 </div>
                 <div class="img_wrap">
-                    <img src="../assets/images/portfolio/jaenung.png" alt="리뉴얼한 재능교육의 전체 페이지" srcset="../assets/images/portfolio/jaenungx2.png 2x">
+                    <div class="img">
+                        <img src="../assets/images/portfolio/jaenung.png" alt="리뉴얼한 재능교육의 전체 페이지" srcset="../assets/images/portfolio/jaenungx2.png 2x">
+                    </div>
                     <div class="controller">
                         <button class="next">다음 프로젝트 보러가기</button>
                     </div>
