--- a/project/project.html
+++ b/project/project.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
         </article>
-        <article id="jaenung_info">
+        <article id="jaenung_info" class="info p_r">
             <div class="w1400">
                 <h3 class="tit">PROJECT01. 재능교육</h3>
                 <p>주요 타켓층의 연령대에 맞도록 리디자인 하였고, Markup/css/jQuery를 통해 기존 사이트에서 접근성을 지키지못한 부분을 보완하였습니다.</p>
@@ -67,8 +67,8 @@
                         <strong>Color</strong>
                         <p>재능교육의 대표색인 빨간색을 활용하여 사용하였습니다</p>
                         <ul>
-                            <li><span>#E60417</span><span class="blind">빨간색</span></li>
-                            <li><span>#FF7800</span><span class="blind">주황색</span></li>
+                            <li><span class="blind">빨간색</span>#E60417</li>
+                            <li><span class="blind">주황색</span>#FF7800</li>
                             <li><span class="blind">빨간색과 주황색의 그라데이션</span></li>
                         </ul>
                     </div>
@@ -91,23 +91,23 @@
                 </div>
                 <div class="coding">
                     <h4 class="subtit">이렇게 코딩했어요</h4>
-                    <div class="left">
-                        <img src="../assets/images/portfolio/jaenung1.PNG" alt="" class="bg" srcset="../assets/images/portfolio/jaenung1x2.png 2x, ../assets/images/portfolio/jaenung1x2.png 3x">
-                        <img src="../assets/images/portfolio/jaenungA.png" alt="" class="circle" srcset="../assets/images/portfolio/jaenungAx2.png 2x">
-                        <p>각 태그에 알맞은 role,property,aria속성을 기입</p>
-                    </div>
-                    <div class="mid">
-                        <img src="../assets/images/portfolio/jaenung2.PNG" alt="" class="bg" srcset="../assets/images/portfolio/jaenung2x2.png 2x, ../assets/images/portfolio/jaenung2x2.png 3x">
-                        <img src="../assets/images/portfolio/jaenungB.png" alt="" class="circle" srcset="../assets/images/portfolio/jaenungBx2.png 2x">
-                        <p>form의 유효성 확인을 위해 정규표현식을 사용</p>
-                    </div>
-                    <div class="right">
-                        <img src="../assets/images/portfolio/jaenung3.PNG" alt="" class="bg" srcset="../assets/images/portfolio/jaenung3x2.png 2x, ../assets/images/portfolio/jaenung3x2.png 3x">
-                        <img src="../assets/images/portfolio/jaenungC.png" alt="" class="circle" srcset="../assets/images/portfolio/jaenungCx2.png 2x">
-                        <ul>
-                            <li>switch문으로 키보드 제어</li>
-                            <li>포커스 제어를 위해 tabIndex와 focus()를 사용</li>
-                        </ul>
+                    <div class="flex">
+                        <div class="left">
+                            <img src="../assets/images/portfolio/jaenung1.PNG" alt="" class="bg" srcset="../assets/images/portfolio/jaenung1x2.png 2x, ../assets/images/portfolio/jaenung1x2.png 3x">
+                            <img src="../assets/images/portfolio/jaenungA.png" alt="" class="circle" srcset="../assets/images/portfolio/jaenungAx2.png 2x">
+                            <p>각 태그에 알맞은 role,property,aria속성을 기입</p>
+                        </div>
+                        <div class="mid">
+                            <img src="../assets/images/portfolio/jaenung2.PNG" alt="" class="bg" srcset="../assets/images/portfolio/jaenung2x2.png 2x, ../assets/images/portfolio/jaenung2x2.png 3x">
+                            <img src="../assets/images/portfolio/jaenungB.png" alt="" class="circle" srcset="../assets/images/portfolio/jaenungBx2.png 2x">
+                            <p>form의 유효성 확인을 위해 정규표현식을 사용</p>
+                        </div>
+                        <div class="right">
+                            <img src="../assets/images/portfolio/jaenung3.PNG" alt="" class="bg" srcset="../assets/images/portfolio/jaenung3x2.png 2x, ../assets/images/portfolio/jaenung3x2.png 3x">
+                            <img src="../assets/images/portfolio/jaenungC.png" alt="" class="circle" srcset="../assets/images/portfolio/jaenungCx2.png 2x">
+                            <p>switch문으로 키보드 제어</p>
+                            <p>포커스 제어를 위해 tabIndex와 focus()를 사용</p>
+                        </div>
                     </div>
                 </div>
                 <a href="namhyunju.github.io/project03/." class="sitego">사이트 바로가기</a>
@@ -140,7 +140,7 @@
                 </div>
             </div>
         </article>
-        <article id="what_info">
+        <article id="what_info" class="info">
             <div class="w1400">
                 <h3 class="tit">PROJECT02. WHAT</h3>
                 <h4 class="subtit">주제</h4>
@@ -151,9 +151,9 @@
                         <strong>Color</strong>
                         <p>black&amp;white 컨셉이지만 눈의 피로를 적게하기 위해 진한 gray색을 사용하였습니다</p>
                         <ul>
-                            <li><span>#282828</span><span class="blind">검은색</span></li>
-                            <li><span>#F6F4F4</span><span class="blind">흰색</span></li>
-                            <li><span>#44AEC6</span><span class="blind">하늘색</span></li>
+                            <li><span class="blind">검은색</span>#282828</li>
+                            <li><span class="blind">흰색</span>#F6F4F4</li>
+                            <li><span class="blind">하늘색</span>#44AEC6</li>
                         </ul>
                     </div>
                     <div class="font">
@@ -175,20 +175,22 @@
                 </div>
                 <div class="coding">
                     <h4 class="subtit">이렇게 코딩했어요</h4>
-                    <div class="left">
-                        <img src="../assets/images/portfolio/what1.PNG" alt="" class="bg" srcset="../assets/images/portfolio/what1x2.png 2x, ../assets/images/portfolio/what1x2.png 3x">
-                        <img src="../assets/images/portfolio/whatA.png" alt="" class="circle" srcset="../assets/images/portfolio/whatAx2.png 2x">
-                        <p>HTML5를 사용하여 의미있는 마크업을 하여 사용자가 보다 사용하고 이해하기 쉽도록 구성</p>
-                    </div>
-                    <div class="mid">
-                        <img src="../assets/images/portfolio/what2.PNG" alt="" class="bg" srcset="../assets/images/portfolio/what2x2.png 2x, ../assets/images/portfolio/what2x2.png 3x">
-                        <img src="../assets/images/portfolio/whatB.png" alt="" class="circle" srcset="../assets/images/portfolio/whatBx2.png 2x">
-                        <p>조건문을 통해 키보드 제어 접근성을 지키고, 네비게이션안에서만 포커스가 이동하도록 제어</p>
-                    </div>
-                    <div class="right">
-                        <img src="../assets/images/portfolio/what3.PNG" alt="" class="bg" srcset="../assets/images/portfolio/what3x2.png 2x, ../assets/images/portfolio/what3x2.png 3x">
-                        <img src="../assets/images/portfolio/whatC.png" alt="" class="circle" srcset="../assets/images/portfolio/whatCx2.png 2x">
-                        <p></p>
+                    <div class="flex">
+                        <div class="left">
+                            <img src="../assets/images/portfolio/what1.PNG" alt="" class="bg" srcset="../assets/images/portfolio/what1x2.png 2x, ../assets/images/portfolio/what1x2.png 3x">
+                            <img src="../assets/images/portfolio/whatA.png" alt="" class="circle" srcset="../assets/images/portfolio/whatAx2.png 2x">
+                            <p>HTML5를 사용하여 의미있는 마크업을 하여 사용자가 보다 사용하고 이해하기 쉽도록 구성</p>
+                        </div>
+                        <div class="mid">
+                            <img src="../assets/images/portfolio/what2.PNG" alt="" class="bg" srcset="../assets/images/portfolio/what2x2.png 2x, ../assets/images/portfolio/what2x2.png 3x">
+                            <img src="../assets/images/portfolio/whatB.png" alt="" class="circle" srcset="../assets/images/portfolio/whatBx2.png 2x">
+                            <p>조건문을 통해 키보드 제어 접근성을 지키고, 네비게이션안에서만 포커스가 이동하도록 제어</p>
+                        </div>
+                        <div class="right">
+                            <img src="../assets/images/portfolio/what3.PNG" alt="" class="bg" srcset="../assets/images/portfolio/what3x2.png 2x, ../assets/images/portfolio/what3x2.png 3x">
+                            <img src="../assets/images/portfolio/whatC.png" alt="" class="circle" srcset="../assets/images/portfolio/whatCx2.png 2x">
+                            <p></p>
+                        </div>
                     </div>
                 </div>
                 <a href="namhyunju.github.io/project02-what/." class="sitego">사이트 바로가기</a>
@@ -222,7 +224,7 @@
                 </div>
             </div>
         </article>
-        <article id="kids_info">
+        <article id="kids_info" class="info">
             <div class="w1400">
                 <h3 class="tit">PROJECT03. 키즈빌리지AR:수학여행</h3>
                 <div class="cnt1">
@@ -266,15 +268,15 @@
                         <p>고대비의 컬러풀한 색을 사용하였습니다</p>
                         <p>Main</p>
                         <ul class="main">
-                            <li><span>#ffaf45</span><span class="blind">연한 주황색</span></li>
-                            <li><span>#2fbcd1</span><span class="blind">진한 하늘색</span></li>
+                            <li><span class="blind">연한 주황색</span>#ffaf45</li>
+                            <li><span class="blind">진한 하늘색</span>#2fbcd1</li>
                         </ul>
                         <p>Sub</p>
                         <ul class="sub">
-                            <li><span>#64b742</span><span class="blind">초록색</span></li>
-                            <li><span>#f6c337</span><span class="blind">노란색</span></li>
-                            <li><span>#ea461f</span><span class="blind">빨간색</span></li>
-                            <li><span>#bc662b</span><span class="blind">갈색</span></li>
+                            <li><span class="blind">초록색</span>#64b742</li>
+                            <li><span class="blind">노란색</span>#f6c337</li>
+                            <li><span class="blind">빨간색</span>#ea461f</li>
+                            <li><span class="blind">갈색</span>#bc662b</li>
                         </ul>
                     </div>
                     <div class="font">
