html,css,js,img수정
오후5시 수정
이미지2배짜리 정리

--- a/header.html
+++ b/header.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8">
     <title> 공통 header </title>
-    <link rel="stylesheet" href="assets/css/common.css">
 </head>
 <body>
     <div class="header">
@@ -19,7 +18,7 @@
             <button class="gnb_close_btn last" type="button" title="네비게이션 닫기">
             </button>
         </nav>
-        <p class="email"><span class="blind">이메일</span>nam_guswn9845@naver.com</p>
+        <p class="email"><span class="blind">이메일 주소</span>nam_guswn9845@naver.com</p>
     </div>
 </body>
 </html>
