--- a/me/me.html
+++ b/me/me.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../assets/css/font.css">
 
     <script src="../assets/js/jquery-1.12.4.min.js"></script>
-    <script src="../assets/js/jquery-ui.min.js"></script>
+    <script src="../assets/js/jquery.easing.min.js"></script>
     <script src="../assets/js/common.js"></script>
     <script src="../assets/js/main.js"></script>
     <script src="../assets/js/style.js"></script>
@@ -108,7 +108,7 @@
                         <p>키보드로 원을 움직여보세요</p>
                         <div class="keyboard">
                             <div class="up"><img src="../assets/images/icon/up_gray.svg" alt="위 방향키"></div>
-                            <div class="right"><img src="../assets/images/icon/up_gray.svg" alt="오른쪽 방향키"></div>
+                            <div class="right click"><img src="../assets/images/icon/up_gray.svg" alt="오른쪽 방향키"></div>
                             <div class="down"><img src="../assets/images/icon/up_gray.svg" alt="아래 방향키"></div>
                             <div class="left"><img src="../assets/images/icon/up_gray.svg" alt="왼쪽 방향키"></div>
                             <div class="spacebar">space bar</div>
