--- a/header.html
+++ b/header.html
@@ -9,6 +9,7 @@
         <h1 class="logo"><a href="../index.html">HyunJu's Portfolio</a></h1>
         <button class="gnb_open_btn" type="button" title="네비게이션 열기"></button>
         <nav class="gnb" id="gnb">
+            <img src="assets/images/common/nav_yellow_bg.png" alt="" class="blob">
             <ul>
                 <li><a href="../index.html" class="first">HOME</a></li>
                 <li><a href="../me/me.html">ABOUT ME</a></li>
