--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </article>
         <article id="cnt2">
             <div class="gnb">
+                <img class="blob" src="assets/images/common/nav_yellow_bg.png" alt="">
                 <ul id="indexGnb">
                     <li><a href="me/me.html">ABOUT ME</a></li>
                     <li><a href="project/project.html">PROJECT</a></li>
