html,css,js,img수정
01-10 오전 5시 업데이트

--- a/index.html
+++ b/index.html
@@ -42,15 +42,12 @@
                 </ul>
             </div>
         </article>
+        <article id="cnt3">
+            <p>저에대해 더 궁금하고<br>함께 나누고 싶은 이야기가 있으시다면</p>
+            <strong>nam_guswn9845@naver.com</strong>
+            <p>언제든지 편한시간에 연락주세요!</p>
+        </article>
     </section>
-    <footer id="footer">
-        <p>저에대해 더 궁금하고<br>함께 나누고 싶은 이야기가 있으시다면</p>
-        <strong>nam_guswn9845@naver.com</strong>
-        <p>언제든지 편한시간에 연락주세요!</p>
-        <div class="link">
-            <a href="https://github.com/NamHyunJu">Git hub</a>
-            <a href="https://www.youtube.com/channel/UCno9zIHLVtwBVunylUjyqXw/featured">youtube</a>
-        </div>
-    </footer>
+    <footer id="footer"></footer>
 </body>
 </html>
