--- a/me/me.html
+++ b/me/me.html
@@ -62,7 +62,7 @@
                 </div>
             </div>
         </article>
-        <article id="skill">
+        <article id="skill" tabindex="0">
             <div class="w1400 tit_wrap">
                 <h2 class="tit">SKILL</h2>
                 <span>제가 잘하는 일을 소개합니다</span>
