--- a/project/jaenung_info.html
+++ b/project/jaenung_info.html
@@ -60,7 +60,7 @@
                     <div class="flex">
                         <div class="left">
                             <img src="../assets/images/portfolio/jaenung1.PNG" alt="" class="bg">
-                            <img src="../assets/images/portfolio/jaenungA.png" alt="" class="circle>
+                            <img src="../assets/images/portfolio/jaenungA.png" alt="" class="circle">
                             <p>각 태그에 알맞은 role,property,aria속성을 기입</p>
                         </div>
                         <div class="mid">
@@ -80,11 +80,6 @@
             </div>
         </article>
     </section>
-    <footer id="footer">
-        <div class="link">
-            <a href="https://github.com/NamHyunJu">Git hub</a>
-            <a href="https://www.youtube.com/channel/UCno9zIHLVtwBVunylUjyqXw/featured">youtube</a>
-        </div>
-    </footer>
+    <footer id="footer"></footer>
 </body>
 </html>
