--- a/project/kids_info.html
+++ b/project/kids_info.html
@@ -135,12 +135,7 @@
         </article>
     </section>
 
-    <footer id="footer">
-        <div class="link">
-            <a href="https://github.com/NamHyunJu">Git hub</a>
-            <a href="https://www.youtube.com/channel/UCno9zIHLVtwBVunylUjyqXw/featured">youtube</a>
-        </div>
-    </footer>
+    <footer id="footer"></footer>
 
 </body>
 </html>
