--- a/project/project.html
+++ b/project/project.html
@@ -77,7 +77,9 @@
                     </ul>
                 </div>
                 <div class="img_wrap">
-                    <img src="../assets/images/portfolio/what.PNG" alt="WHAT의 전체 페이지">
+                    <div class="img">
+                        <img src="../assets/images/portfolio/what.PNG" alt="WHAT의 전체 페이지">
+                    </div>
                     <div class="controller">
                         <button class="prev">이전 프로젝트 보러가기</button>
                         <button class="next">다음 프로젝트 보러가기</button>
@@ -106,7 +108,9 @@
                     </ul>
                 </div>
                 <div class="img_wrap">
-                    <img src="../assets/images/portfolio/ar.png" alt="키즈빌리지AR의 메인화면">
+                    <div class="img">
+                        <img src="../assets/images/portfolio/ar.png" alt="키즈빌리지AR의 메인화면">
+                    </div>
                     <div class="controller">
                         <button class="prev">이전 프로젝트 보러가기</button>
                     </div>
@@ -114,11 +118,6 @@
             </div>
         </article>
     </section>
-    <footer id="footer">
-        <div class="link">
-            <a href="https://github.com/NamHyunJu">Git hub</a>
-            <a href="https://www.youtube.com/channel/UCno9zIHLVtwBVunylUjyqXw/featured">youtube</a>
-        </div>
-    </footer>
+    <footer id="footer"></footer>
 </body>
 </html>
