--- a/project/what_info.html
+++ b/project/what_info.html
@@ -21,7 +21,7 @@
     <header id="header" class="head"></header>
 
     <section id="projectCnt">
-        <article id="what_info" class="info">
+        <article id="what_info" class="info p_r">
             <div class="w1400">
                 <h3 class="tit">PROJECT02. WHAT</h3>
                 <h4 class="subtit">주제</h4>
@@ -40,17 +40,19 @@
                     <div class="font">
                         <strong>Fonts</strong>
                         <p>디자인컨셉에 맞게 고딕체를 사용하였습니다</p>
-                        <div class="left">
-                            <p class="title">Point</p>
-                            <p class="f_name">#Cormorant</p>
-                            <p class="big">WHAT 재능기부</p>
-                            <p class="small">WHAT 재능기부</p>
-                        </div>
-                        <div class="right">
-                            <p class="title">본문</p>
-                            <p class="f_name">#Poppins</p>
-                            <p class="big">WHAT 재능기부</p>
-                            <p class="small">WHAT 재능기부</p>
+                        <div>
+                            <div class="left">
+                                <p class="title">Point</p>
+                                <p class="f_name">#Cormorant</p>
+                                <p class="big">WHAT 재능기부</p>
+                                <p class="small">WHAT 재능기부</p>
+                            </div>
+                            <div class="right">
+                                <p class="title">본문</p>
+                                <p class="f_name">#Poppins</p>
+                                <p class="big">WHAT 재능기부</p>
+                                <p class="small">WHAT 재능기부</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -65,12 +67,12 @@
                         <div class="mid">
                             <img src="../assets/images/portfolio/what2.PNG" alt="" class="bg">
                             <img src="../assets/images/portfolio/whatB.png" alt="" class="circle">
-                            <p>조건문을 통해 키보드 제어 접근성을 지키고, 네비게이션안에서만 포커스가 이동하도록 제어</p>
+                            <p>조건문을 통해 키보드 제어 접근성을 지키고, 네비게이션 안에서만 포커스가 이동하도록 제어</p>
                         </div>
                         <div class="right">
                             <img src="../assets/images/portfolio/what3.PNG" alt="" class="bg">
                             <img src="../assets/images/portfolio/whatC.png" alt="" class="circle">
-                            <p></p>
+                            <p>스크롤 이벤트와 fade효과를 통해 지루하지 않도록 효과를 줌</p>
                         </div>
                     </div>
                 </div>
@@ -78,12 +80,7 @@
             </div>
         </article>
     </section>
-    <footer id="footer">
-        <div class="link">
-            <a href="https://github.com/NamHyunJu">Git hub</a>
-            <a href="https://www.youtube.com/channel/UCno9zIHLVtwBVunylUjyqXw/featured">youtube</a>
-        </div>
-    </footer>
+    <footer id="footer"></footer>
 
 </body>
 </html>
